metadatadeploy/objects/Account.object
<CustomObject>
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    <sharingModel>ReadWrite</sharingModel>
    
    <fields>
        
    <fullName>Axiom_Setup__c</fullName>
        
    <deleteConstraint>SetNull</deleteConstraint>
        
    <description>Primary Axiom Setup used by the Group or Practice Group</description>
        
        
    <label>Axiom Setup</label>
        
    <referenceTo>Axiom_Setup__c</referenceTo>
        
    <relationshipLabel>Accounts</relationshipLabel>
        
    <relationshipName>Accounts</relationshipName>
        
        
        
    <type>Lookup</type>
        
</fields>
    <fields>
        
    <fullName>BAA_Link__c</fullName>
        
        
    <inlineHelpText>Link to BAA between Clover and the Practice</inlineHelpText>
        
    <label>BAA Link</label>
        
        
        
    <type>Url</type>
        
</fields>
    <fields>
        
    <fullName>Calculated_TaxId__c</fullName>
        
        
    <formula>IF(
  NOT(ISBLANK( HealthCloudGA__TaxId__c )), HealthCloudGA__TaxId__c,
  IF(
    NOT(ISBLANK( Parent.HealthCloudGA__TaxId__c )), Parent.HealthCloudGA__TaxId__c,
      Parent.Parent.HealthCloudGA__TaxId__c
  )
)</formula>
        
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        
    <label>Calculated_TaxId</label>
        
        
    <type>Text</type>
        
        
</fields>
    <fields>
        
    <fullName>Contract_Link__c</fullName>
        
        
    <label>Contract Link</label>
        
        
        
    <type>Url</type>
        
</fields>
    <fields>
        
    <fullName>Contract_Status__c</fullName>
        
        
    <label>Contract Status</label>
        
        
        
    <type>Picklist</type>
        
    <valueSet>
            
        <valueSetDefinition>
                
                
            <value>
                    
                <fullName>Not Started</fullName>
                    
                    
                <label>Not Started</label>
                    
            </value>
                
            <value>
                    
                <fullName>Signed</fullName>
                    
                    
                <label>Signed</label>
                    
            </value>
                
        </valueSetDefinition>
            
    </valueSet>
        
</fields>
    <fields>
        
    <fullName>EMR_System__c</fullName>
        
    <deleteConstraint>SetNull</deleteConstraint>
        
    <description>Primary EMR used by the Practice Group or Group</description>
        
        
    <label>EMR System</label>
        
    <referenceTo>EMR_System__c</referenceTo>
        
    <relationshipLabel>Accounts</relationshipLabel>
        
    <relationshipName>Accounts</relationshipName>
        
        
        
    <type>Lookup</type>
        
</fields>
    <fields>
        
    <fullName>HealthCloudGA__Active__c</fullName>
        
        
        
    <label>Active</label>
        
        
        
    <type>Picklist</type>
        
    <valueSet>
            
        <valueSetDefinition>
                
                
            <value>
                    
                <fullName>No</fullName>
                    
                    
                <label>No</label>
                    
            </value>
                
            <value>
                    
                <fullName>Yes</fullName>
                    
                    
                <label>Yes</label>
                    
            </value>
                
        </valueSetDefinition>
            
    </valueSet>
        
</fields>
    <fields>
        
    <fullName>HealthCloudGA__CarePlan__c</fullName>
        
    <deleteConstraint>SetNull</deleteConstraint>
        
        
    <description>Healthcare plan for this patient</description>
        
        
    <inlineHelpText>Healthcare plan for this patient</inlineHelpText>
        
    <label>Care Plan</label>
        
    <referenceTo>Case</referenceTo>
        
    <relationshipLabel>PatientAccounts</relationshipLabel>
        
    <relationshipName>PatientAccounts</relationshipName>
        
        
        
    <type>Lookup</type>
        
</fields>
    <fields>
        
    <fullName>HealthCloudGA__Disabled__c</fullName>
        
    <defaultValue>false</defaultValue>
        
        
        
    <label>Disabled</label>
        
        
    <type>Checkbox</type>
        
</fields>
    <fields>
        
    <fullName>HealthCloudGA__EnrollmentType__c</fullName>
        
        
        
    <label>Enrollment Type</label>
        
        
        
    <type>Picklist</type>
        
    <valueSet>
            
        <restricted>true</restricted>
            
        <valueSetDefinition>
                
                
            <value>
                    
                <fullName>Dual</fullName>
                    
                    
                <label>Dual</label>
                    
            </value>
                
            <value>
                    
                <fullName>NonDual</fullName>
                    
                <default>true</default>
                    
                <label>NonDual</label>
                    
            </value>
                
            <value>
                    
                <fullName>FBDual</fullName>
                    
                    
                <label>FBDual</label>
                    
            </value>
                
            <value>
                    
                <fullName>PBDual</fullName>
                    
                    
                <label>PBDual</label>
                    
            </value>
                
            <value>
                    
                <fullName>ESRD</fullName>
                    
                    
                <label>ESRD</label>
                    
            </value>
                
        </valueSetDefinition>
            
    </valueSet>
        
</fields>
    <fields>
        
    <fullName>HealthCloudGA__IndividualId__c</fullName>
        
    <caseSensitive>true</caseSensitive>
        
        
    <description>Unique ID that relates this individual&apos;s account record to its contact record.</description>
        
        
    <label>Individual ID</label>
        
    <length>37</length>
        
        
        
    <type>Text</type>
        
    <unique>true</unique>
        
</fields>
    <fields>
        
    <fullName>HealthCloudGA__IndividualType__c</fullName>
        
        
    <description>Individual Type</description>
        
        
    <label>Individual Type</label>
        
        
        
    <type>Picklist</type>
        
    <valueSet>
            
        <valueSetDefinition>
                
                
            <value>
                    
                <fullName>Individual</fullName>
                    
                    
                <label>Individual</label>
                    
            </value>
                
            <value>
                    
                <fullName>Group</fullName>
                    
                    
                <label>Group</label>
                    
            </value>
                
        </valueSetDefinition>
            
    </valueSet>
        
</fields>
    <fields>
        
    <fullName>HealthCloudGA__Institution__c</fullName>
        
    <defaultValue>false</defaultValue>
        
        
    <description>Indicates whether a patient is in a institution.</description>
        
        
    <inlineHelpText>Indicates whether a patient is in a institution.</inlineHelpText>
        
    <label>Institution</label>
        
        
    <type>Checkbox</type>
        
</fields>
    <fields>
        
    <fullName>HealthCloudGA__LowIncome__c</fullName>
        
    <defaultValue>false</defaultValue>
        
        
    <description>Indicates whether a patient falls within low income guidelines.</description>
        
        
    <inlineHelpText>Indicates whether a patient falls within low income guidelines.</inlineHelpText>
        
    <label>Low Income</label>
        
        
    <type>Checkbox</type>
        
</fields>
    <fields>
        
    <fullName>HealthCloudGA__MedicaidEligibilityStatus__c</fullName>
        
    <defaultValue>false</defaultValue>
        
        
    <description>Indicates whether a patient is eligible for medicaid.</description>
        
        
    <inlineHelpText>Indicates whether a patient is eligible for medicaid.</inlineHelpText>
        
    <label>Medicaid Eligibility Status</label>
        
        
    <type>Checkbox</type>
        
</fields>
    <fields>
        
    <fullName>HealthCloudGA__MedicalRecordNumber__c</fullName>
        
        
    <description>The medical record number is organization specific. The number is used by the hospital as a systematic documentation of a patient´s medical history and care during each hospital stay.</description>
        
        
    <label>Medical Record Number</label>
        
    <length>255</length>
        
        
        
    <type>Text</type>
        
        
</fields>
    <fields>
        
    <fullName>HealthCloudGA__MedicareEnrollee__c</fullName>
        
        
    <description>New member or continued from previous year.</description>
        
        
    <inlineHelpText>New member or continued from previous year.</inlineHelpText>
        
    <label>Medicare Enrollee</label>
        
        
        
    <type>Picklist</type>
        
    <valueSet>
            
        <restricted>true</restricted>
            
        <valueSetDefinition>
                
                
            <value>
                    
                <fullName>New Enrollee</fullName>
                    
                    
                <label>New Enrollee</label>
                    
            </value>
                
            <value>
                    
                <fullName>Continued</fullName>
                    
                    
                <label>Continued</label>
                    
            </value>
                
        </valueSetDefinition>
            
    </valueSet>
        
</fields>
    <fields>
        
    <fullName>HealthCloudGA__OREC__c</fullName>
        
        
    <description>Original Reason for Medicare Entitlement</description>
        
        
    <label>OREC</label>
        
        
        
    <type>Picklist</type>
        
    <valueSet>
            
        <restricted>true</restricted>
            
        <valueSetDefinition>
                
                
            <value>
                    
                <fullName>Age</fullName>
                    
                    
                <label>Age</label>
                    
            </value>
                
            <value>
                    
                <fullName>Disabled</fullName>
                    
                    
                <label>Disabled</label>
                    
            </value>
                
        </valueSetDefinition>
            
    </valueSet>
        
</fields>
    <fields>
        
    <fullName>HealthCloudGA__PayerType__c</fullName>
        
        
        
    <label>Payer Type</label>
        
    <length>32</length>
        
        
        
    <type>Text</type>
        
        
</fields>
    <fields>
        
    <fullName>HealthCloudGA__PrimaryContact__c</fullName>
        
    <deleteConstraint>SetNull</deleteConstraint>
        
        
        
    <label>Primary Contact</label>
        
    <referenceTo>Contact</referenceTo>
        
    <relationshipLabel>Accounts (Primary Contact)</relationshipLabel>
        
    <relationshipName>Accounts</relationshipName>
        
        
        
    <type>Lookup</type>
        
</fields>
    <fields>
        
    <fullName>HealthCloudGA__SourceSystemId__c</fullName>
        
        
        
    <description>Unique external id</description>
        
    <externalId>true</externalId>
        
    <label>Source System ID</label>
        
    <length>255</length>
        
        
        
    <type>Text</type>
        
    <unique>true</unique>
        
</fields>
    <fields>
        
    <fullName>HealthCloudGA__SourceSystem__c</fullName>
        
    <defaultValue>&quot;Health1-&quot;+$Organization.Id</defaultValue>
        
        
    <description>Identifies the system that created the record and owns update rights to it.</description>
        
        
    <inlineHelpText>Identifies the system that created the record and owns update rights to it. Defaults to Health1 for manually created records.</inlineHelpText>
        
    <label>Source System</label>
        
    <length>64</length>
        
        
        
    <type>Text</type>
        
        
</fields>
    <fields>
        
    <fullName>HealthCloudGA__TaxId__c</fullName>
        
        
        
    <label>TaxId</label>
        
    <length>32</length>
        
        
        
    <type>Text</type>
        
        
</fields>
    <fields>
        
    <fullName>On_CA_MA__c</fullName>
        
    <defaultValue>false</defaultValue>
        
        
    <label>On CA MA</label>
        
        
    <type>Checkbox</type>
        
</fields>
    <fields>
        
    <fullName>Top_Level_Account_Id__c</fullName>
        
        
    <formula>IF(NOT(ISBLANK(Parent.Parent.Parent.Parent.ParentId)), Parent.Parent.Parent.Parent.ParentId,
IF(NOT(ISBLANK(Parent.Parent.Parent.ParentId)), Parent.Parent.Parent.ParentId,
IF(NOT(ISBLANK(Parent.Parent.ParentId)), Parent.Parent.ParentId,
IF(NOT(ISBLANK(Parent.ParentId)), Parent.ParentId,
IF(NOT(ISBLANK(ParentId)),ParentId,
Id)))))</formula>
        
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        
    <label>Top_Level_Account_Id</label>
        
        
    <type>Text</type>
        
        
</fields>
    <fields>
        
    <fullName>W9_ACH_Link__c</fullName>
        
        
    <label>W9 / ACH Link</label>
        
        
        
    <type>Url</type>
        
</fields>
    <recordTypes>
        
    <fullName>Business_Account</fullName>
        
    <active>true</active>
        
    <label>Business Account</label>
        
        
        
        
        
        
        
        
        
        
        
        
</recordTypes>
    <recordTypes>
        
    <fullName>Group</fullName>
        
    <active>true</active>
        
    <label>Group</label>
        
        
        
        
        
        
        
        
        
        
        
        
</recordTypes>
    <recordTypes>
        
    <fullName>HealthCloudGA__IndustriesBusiness</fullName>
        
    <active>true</active>
        
    <description>Represents a business or an organization</description>
        
    <label>Business</label>
        
        
        
        
        
        
        
        
        
        
        
        
</recordTypes>
    <recordTypes>
        
    <fullName>HealthCloudGA__IndustriesHousehold</fullName>
        
    <active>true</active>
        
    <description>Represents a Household</description>
        
    <label>Household</label>
        
        
        
        
        
        
        
        
        
        
        
        
</recordTypes>
    <recordTypes>
        
    <fullName>HealthCloudGA__IndustriesIndividual</fullName>
        
    <active>true</active>
        
    <description>Represents an Individual</description>
        
    <label>Individual</label>
        
        
        
        
        
        
        
        
        
        
        
        
</recordTypes>
    <recordTypes>
        
    <fullName>HealthCloudGA__IndustriesPayer</fullName>
        
    <active>true</active>
        
    <description>Represents a Payer</description>
        
    <label>Payer</label>
        
        
        
        
        
        
        
        
        
        
        
        
</recordTypes>
    <recordTypes>
        
    <fullName>Practice_Group</fullName>
        
    <active>true</active>
        
    <label>Practice Group</label>
        
        
        
        
        
        
        
        
        
        
        
        
</recordTypes>
    <validationRules>
        
    <fullName>GroupParentValidation</fullName>
        
    <active>false</active>
        
    <errorConditionFormula>AND(
  ISPICKVAL(Type, &apos;Group&apos;),
  OR(
    ISBLANK(ParentId),
    NOT(ISPICKVAL(Parent.Type, &apos;Organization&apos;))
  )
)</errorConditionFormula>
        
    <errorMessage>Groups must have a parent that is of the type &quot;Organization&quot;</errorMessage>
        
</validationRules>
    <validationRules>
        
    <fullName>HealthCloudGA__NotAllowingConversionFromIndividual</fullName>
        
    <active>false</active>
        
    <errorConditionFormula>1!=1</errorConditionFormula>
        
    <errorMessage>The Individual record type can&apos;t be changed</errorMessage>
        
</validationRules>
    <validationRules>
        
    <fullName>HealthCloudGA__NotAllowingConversionToIndividual</fullName>
        
    <active>false</active>
        
    <description>Not allowing changing the record type of &quot;non-Individual&quot; to &quot;Individual&quot; record type</description>
        
    <errorConditionFormula>1!=1</errorConditionFormula>
        
    <errorMessage>The record type can&apos;t be changed to Individual.</errorMessage>
        
</validationRules>
    <validationRules>
        
    <fullName>PracticeGroupParentValidation</fullName>
        
    <active>false</active>
        
    <errorConditionFormula>AND(
  ISPICKVAL(Type, &apos;Practice Group&apos;),
  OR(
    ISBLANK(ParentId),
    AND(
      NOT(ISPICKVAL(Parent.Type, &apos;Organization&apos;)),
      NOT(ISPICKVAL(Parent.Type, &apos;Group&apos;))
    )
  )
)</errorConditionFormula>
        
    <errorMessage>Practice Groups must have a parent and can only have parents of the type &quot;Organization&quot; or &quot;Group&quot;</errorMessage>
        
</validationRules>
    <listViews>
        
    <fullName>All_Accounts</fullName>
        
    <columns>ACCOUNT.NAME</columns>
        
    <columns>ACCOUNT.SITE</columns>
        
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
        
    <columns>ACCOUNT.PHONE1</columns>
        
    <columns>ACCOUNT.TYPE</columns>
        
    <columns>CORE.USERS.ALIAS</columns>
        
    <filterScope>Everything</filterScope>
        
    <label>All Accounts</label>
        
</listViews>
    <listViews>
        
    <fullName>All_Practice_Groups</fullName>
        
    <columns>ACCOUNT.NAME</columns>
        
    <columns>ACCOUNT.SITE</columns>
        
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
        
    <columns>ACCOUNT.PHONE1</columns>
        
    <columns>ACCOUNT.TYPE</columns>
        
    <columns>CORE.USERS.ALIAS</columns>
        
    <filterScope>Everything</filterScope>
        
    <filters>
            
        <field>ACCOUNT.TYPE</field>
            
        <operation>equals</operation>
            
        <value>Practice Group</value>
            
    </filters>
        
    <label>All Practice Groups</label>
        
</listViews>
    <listViews>
        
    <fullName>Organizations</fullName>
        
    <columns>ACCOUNT.NAME</columns>
        
    <columns>ACCOUNT.SITE</columns>
        
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
        
    <columns>ACCOUNT.PHONE1</columns>
        
    <columns>ACCOUNT.TYPE</columns>
        
    <columns>CORE.USERS.ALIAS</columns>
        
    <filterScope>Everything</filterScope>
        
    <filters>
            
        <field>ACCOUNT.TYPE</field>
            
        <operation>equals</operation>
            
        <value>Organization</value>
            
    </filters>
        
    <label>Organizations</label>
        
</listViews>
    <listViews>
        
    <fullName>Org_Account_Hierarchy</fullName>
        
    <columns>ACCOUNT.NAME</columns>
        
    <columns>ACCOUNT.TYPE</columns>
        
    <columns>Calculated_TaxId__c</columns>
        
    <filterScope>Everything</filterScope>
        
    <label>Org_Account_Hierarchy</label>
        
</listViews>
    <listViews>
        
    <fullName>Org_Account_Hierarchy1</fullName>
        
    <columns>ACCOUNT.NAME</columns>
        
    <columns>ACCOUNT.TYPE</columns>
        
    <columns>ACCOUNT.ADDRESS1_ZIP</columns>
        
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
        
    <filterScope>Everything</filterScope>
        
    <label>Org_Account_Hierarchy</label>
        
</listViews>
    <listViews>
        
    <fullName>Org_Account_Hierarchy2</fullName>
        
    <columns>ACCOUNT.NAME</columns>
        
    <columns>ACCOUNT.TYPE</columns>
        
    <columns>ACCOUNT.ADDRESS1_ZIP</columns>
        
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
        
    <filterScope>Everything</filterScope>
        
    <label>Org_Account_Hierarchy</label>
        
</listViews>
</CustomObject>